# SEALython

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
cmake/: CPM.cmake
examples/: 1_bfv_basics.ipynb  2_encoders.ipynb  3_levels.ipynb  6_rotation.ipynb  example_helper.py
src/: wrapper.cpp
